# greenbriar_scribe

./: .gitignore  LICENSE  README.md  pyproject.toml
greenbriar_scribe/: __init__.py  clean.py  cli.py  core.py  extract.py  layout.py  ocr.py  options.py  output.py  segment.py  simpletex.py  utils.py
tests/: test_smoke.py
